create 4 steps at reservation