@@ -1,10 +1,11 @@
 package com.example.stayeasymonolith.service;
 
 import com.example.stayeasymonolith.exceptions.RoomNotFoundException;
-import com.example.stayeasymonolith.model.Hotel;
-import com.example.stayeasymonolith.model.Room;
-import com.example.stayeasymonolith.model.RoomType;
+import com.example.stayeasymonolith.model.*;
 import com.example.stayeasymonolith.repository.RoomRepository;
+import jakarta.transaction.Transactional;
+import org.springframework.context.MessageSource;
+import org.springframework.context.i18n.LocaleContextHolder;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
@@ -12,16 +13,23 @@ import org.springframework.stereotype.Service;
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 @Service
 public class RoomService {
     private final RoomRepository roomRepository;
-    private final ReservationService reservationServiceService;
+    private final ReservationService reservationService;
+    private final MessageSource messageSource;
 
-    public RoomService(RoomRepository roomRepository, ReservationService reservationServiceService) {
+    public RoomService(RoomRepository roomRepository, ReservationService reservationServiceService, MessageSource messageSource) {
         this.roomRepository = roomRepository;
-        this.reservationServiceService = reservationServiceService;
+        this.reservationService = reservationServiceService;
+        this.messageSource = messageSource;
+    }
+
+    public Room findById(long id) {
+        return roomRepository.findById(id)
+                .orElseThrow(() -> new RoomNotFoundException("Room with given id: %s do not exist".formatted(id)));
     }
 
     public Page<Room> findRoomsByHotel(Pageable pageable, Hotel hotel) {
@@ -41,7 +49,7 @@ public class RoomService {
                                                                 RoomType roomType,
                                                                 BigDecimal minCost,
                                                                 BigDecimal maxCost) {
-        Page<Room> availableRooms = null;
+        Page<Room> availableRooms;
         if (roomType == null) {
             availableRooms = roomRepository
                     .findRoomsByHotelAndCostBetween(pageable, hotel, minCost, maxCost);
@@ -55,22 +63,40 @@ public class RoomService {
 
     public List<Room> findAvailableHotelRoomsBetweenDates(Pageable pageable,
                                                           Hotel hotel,
-                                                          LocalDate checkIn,
-                                                          LocalDate checkOut) {
+                                                          Reservation reservation) {
         LocalDate today = LocalDate.now();
-        LocalDate finalCheckIn = (checkIn != null && !checkIn.isBefore(today)) ? checkIn : today;
-        if(checkOut.isBefore(checkIn)){
+        reservation.setCheckIn((reservation.getCheckIn() != null && !reservation.getCheckIn().isBefore(today)) ? reservation.getCheckIn() : today);
+        LocalDate finalCheckIn = reservation.getCheckIn();
+        LocalDate checkOut = reservation.getCheckOut();
+        if (checkOut.isBefore(finalCheckIn)) {
             throw new IllegalStateException("Invalid dates");
         }
         return findRoomsByHotel(pageable, hotel)
                 .stream()
-                .filter(room -> reservationServiceService.checkRoomAvailabilityBetweenDates(room, finalCheckIn, checkOut))
-                .collect(Collectors.toList());
+                .filter(room -> reservationService.checkRoomAvailabilityBetweenDates(room, finalCheckIn, checkOut))
+                .toList();
     }
 
     private void throwRoomNotFoundExceptionWhenRoomPageIsEmpty(Page<Room> rooms) {
         if (rooms.isEmpty()) {
             throw new RoomNotFoundException("Room List is empty.");
         }
+    }
+
+    public List<String> getRoomTypeEnumNamesFromProperties(Set<RoomType> roomTypes) {
+        return roomTypes.stream()
+                .map(roomType -> messageSource.getMessage("enum.RoomType." + roomType, null, LocaleContextHolder.getLocale()))
+                .toList();
+    }
+
+    public void setReservation(Reservation reservation, List<Room> rooms) {
+        for (Room room : rooms) {
+            room.getReservations().add(reservation);
+        }
+    }
+
+    @Transactional
+    public void saveRooms(List<Room> rooms) {
+        roomRepository.saveAll(rooms);
     }
 }
